--- a/unicorn/templates/default/unicorn.conf.erb
+++ b/unicorn/templates/default/unicorn.conf.erb
@@ -13,6 +13,8 @@ pid "<%= @deploy[:deploy_to]%>/shared/pids/unicorn.pid"
 stderr_path "<%= @deploy[:deploy_to]%>/shared/log/unicorn.stderr.log"
 stdout_path "<%= @deploy[:deploy_to]%>/shared/log/unicorn.stdout.log"
 
+# combine REE with "preload_app true" for memory savings
+# http://rubyenterpriseedition.com/faq.html#adapt_apps_for_cow
 preload_app <%= node[:unicorn][:preload_app] %>
 GC.copy_on_write_friendly = true if GC.respond_to?(:copy_on_write_friendly=)
 
@@ -26,10 +28,6 @@ before_fork do |server, worker|
   # the following is highly recomended for Rails + "preload_app true"
   # as there's no need for the master process to hold a connection
   if defined?(ActiveRecord::Base)
-    ActiveRecord::Base.connection_proxy.instance_variable_get(:@shards).each do |shard, connection_pool|
-      connection_pool.disconnect!
-    end
-
     ActiveRecord::Base.connection.disconnect!
   end
 
@@ -46,17 +44,9 @@ before_fork do |server, worker|
 end
 
 after_fork do |server, worker|
+  # the following is *required* for Rails + "preload_app true",
   if defined?(ActiveRecord::Base)
-    config = Rails.application.config.database_configuration[Rails.env]
-    config['reaping_frequency'] = ENV['DB_REAP_FREQ'] || 10 # seconds
-    config['pool'] = ENV['DB_POOL'] || 5
-    if Octopus.enabled?
-      Octopus.config[Rails.env]['master'] = config
-      ActiveRecord::Base.connection.initialize_shards(Octopus.config)
-      # ActiveRecord::Base.connection_proxy.instance_variable_get(:@shards).each {|k,v| v.clear_reloadable_connections! }
-    elsif
-      ActiveRecord::Base.establish_connection(config)
-    end
+    ActiveRecord::Base.establish_connection
   end
 
   # if preload_app is true, then you may also want to check and
